--- a/ScoreTest/ScoreTest.csproj
+++ b/ScoreTest/ScoreTest.csproj
@@ -81,9 +81,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\LeaderboardManager.cs" />
-    <Compile Include="Assets\Scripts\ScoreDisplay.cs" />
-    <Compile Include="Assets\Scripts\ScoreEntry.cs" />
+    <Compile Include="Assets\Scripts\LeaderboardManager\LeaderboardManager.cs" />
+    <Compile Include="Assets\Scripts\LeaderboardManager\ScoreDisplay.cs" />
+    <Compile Include="Assets\Scripts\LeaderboardManager\ScoreEntry.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\LeaderboardManagerReadme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
